--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-author: cailee
-title: 
+author: blog gal
+title: cailee's test blog
 header-img: img/home-bg.png
 email: cailee.adamson+osebblogsetup01@wework.com
-copyright_name: cailee
+copyright_name: blog gal
 description: > # this means to ignore newlines until "baseurl:"
-  
+  bloggy
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  caileetest01
